--- a/public/css/style_tabs.css
+++ b/public/css/style_tabs.css
@@ -1,6 +1,6 @@
 .tab-container {
   overflow: hidden;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .tabs {
